# FDTDW

./: .gitignore  README.md  pyproject.toml
examples/benchmark/: approx.csv  approx.py  benchmark.sh  benchmark_meep.sh  fdtdw0.py  fdtdx0.py  fdtdx0_loop.py  meep0.py  plot.py  results.csv  results_fdtdw.csv  results_fdtdx.csv  results_meep.csv  valid_model.py
examples/dipole/: dipole.py
examples/flux/: parallel.py  pml_check.py
examples/microstrip/: adj_corner.py  clean.sh  microstrip.py  mode_rec.py  mode_rec_coll.py  readme.txt
fdtdw/: __init__.py
fdtdw.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fdtdw/api/: __init__.py  material_simulation.py
fdtdw/kernels/: __init__.py  adjoint32.py  complex32.py  io32.py  pc32.py  sources32.py  structs32.py  update32.py  updatepml32.py  updateyee32.py  utils32.py
fdtdw/materials/: __init__.py  _material_model.py  direct_material_model.py  standard_material_model.py
fdtdw/postprocessing/: __init__.py  export.py  render.py
fdtdw/simulations/: __init__.py  _adjoint_simulation.py  _base_simulation.py  _graph_tape.py  adjoint_cp_simulation.py  adjoint_dft_simulation.py  reference_simulation.py
